Added stored XSS vulnerability and ability to create a runnable Jar file.

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
 }
 
 // Define the main class for the application
-mainClassName = 'App'
+mainClassName = 'app.Application'
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
@@ -39,3 +39,24 @@ repositories {
     jcenter()
     mavenCentral()
 }
+/*
+jar {
+    baseName = 'outlaw-gradle'
+    version = '0.1.0'
+    manifest {
+        attributes 'Implementation-Title': 'Checkmarx Java Trainer',
+                'Implementation-Version': version,
+                'Main-Class': 'app.Application'
+    }
+}
+*/
+task fatJar(type: Jar) {
+    baseName = project.name + '-fat'
+    from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+    manifest {
+        attributes 'Main-Class': 'app.Application'
+    }
+}
+
+build.dependsOn fatJar
